<?xml version="1.0"?>
<package format="2">
  <name>sophus_catkin</name>
  <version>0.9.5</version>
  <description>sophus.</description>
  <maintainer email="fadri.furrer@mavt.ethz.ch">Fadri Furrer</maintainer>
  <author>Fadri Furrer</author>
  <license>New BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>eigen_catkin</depend>

</package>
